<resources>
    <string name="gcm_sender_id" translatable="false">INSERT YOUR KEY FOR GCM</string>
    <string name="app_name">dodicall</string>
    <string name="navigation_drawer_open">Открыть панель навигации</string>
    <string name="navigation_drawer_close">Закрыть панель навигации</string>
    <string name="content_description_add_number" translatable="false">Добавить номер</string>
    <string name="content_description_erase_number" translatable="false">Удалить символ или полностью номер</string>
    <string name="content_description_call" translatable="false">Позвонить</string>
    <string name="content_description_avatar" translatable="false">Аватар</string>
    <string name="content_description_is_dodicall_contact" translatable="false">Контакт из додиколл</string>
    <string name="action_search">Поиск в моих контактах</string>
    <string name="action_invitations">Запросы и приглашения</string>
    <string name="action_user_search">Поиск новых контактов</string>
    <string name="contacts_filter_all">Все контакты</string>
    <string name="contacts_filter_dodicall">dodicall</string>
    <string name="contacts_filter_groups">Группы контактов</string>
    <string name="contacts_filter_locked">Заблокированные</string>
    <string name="new_requests_zero">Новые приглашения</string>
    <string name="new_requests_count">Новые приглашения (%d)</string>
    <string name="contact_waiting_for_acceptance">В ожидании подтверждения</string>
    <string name="contact_request_sent">Запрос отправлен</string>
    <string name="contact_was_added">Пользователь добавлен в список контактов</string>
    <string name="action_history_filter">Фильтр</string>
    <string name="action_history_edit">Редактировать</string>
    <string name="action_create_new_chat">Создать новый чат</string>
    <string name="action_delete_chats">Удалить чаты</string>
    <string name="action_chat_search">Поиск в чатах</string>
    <string name="title_activity_login">Login</string>
    <string name="CONTENT_AUTHORITY" translatable="false">ru.swisstok.provider</string>
    <string name="ACCOUNT_TYPE" translatable="false">ru.swisstok.account</string>
    <string name="login_hint">логин</string>
    <string name="password_hint">пароль</string>
    <string name="login_button">Войти</string>
    <string name="login_button_test">Войти (test)</string>
    <string name="login_failure">логин или пароль введены неверно</string>
    <string name="app_version_number">Версия %1$s (%2$s) %3$s</string>
    <string name="password_restore">Забыли пароль?</string>
    <string name="registration">Зарегистрироваться</string>
    <string name="nav_drawer_menu_balance">Баланс</string>
    <string name="nav_drawer_menu_change_status">Статус</string>
    <string name="tab_title_contacts">Контакты</string>
    <string name="tab_title_history">История</string>
    <string name="tab_title_chats">Чаты</string>
    <string name="tab_title_dialpad">Позвонить</string>
    <string name="title_activity_call_history_detail">Вызовы</string>
    <string name="pref_header_profile">Профиль</string>
    <string name="pref_header_interface">Интерфейс</string>
    <string name="pref_header_telephony">Телефония</string>
    <string name="pref_header_encryption">Шифрование</string>
    <string name="pref_header_chats">Чаты</string>
    <string name="pref_header_video">Видео</string>
    <string name="pref_header_audio">Аудио</string>
    <string name="pref_header_common">Общие</string>
    <string name="pref_header_info">Информация</string>
    <string name="pref_header_debug">Отладка</string>
    <string name="pref_common_white_list_title">Белый список</string>
    <string name="pref_white_list_warning_message">Вы будете получать входящие звонки только от пользователей из белого списка. Включить режим \"белый список\"?</string>
    <string name="pref_white_list_empty_message">Для включения настройки необходимо добавить контакты в белый список</string>
    <string name="pref_interface_style_title">Стиль</string>
    <string name="pref_interface_style_default">Стандартный</string>
    <string name="pref_interface_style_light">Светлый</string>
    <string name="pref_interface_style_dark">Темный</string>
    <string name="pref_interface_style_default_value" translatable="false">pref_style_default</string>
    <string name="pref_interface_style_light_value" translatable="false">pref_style_light</string>
    <string name="pref_interface_style_dark_value" translatable="false">pref_style_dark</string>
    <string name="pref_interface_language_title">Язык интерфейса</string>
    <string name="pref_interface_language_ru">RU</string>
    <string name="pref_interface_language_en">EN</string>
    <string name="pref_interface_language_tr">TR</string>
    <string name="pref_interface_language_de">DE</string>
    <string name="pref_interface_language_ru_value" translatable="false">ru</string>
    <string name="pref_interface_language_en_value" translatable="false">en</string>
    <string name="pref_interface_language_tr_value" translatable="false">tr</string>
    <string name="pref_interface_language_de_value" translatable="false">de</string>
    <string name="pref_interface_animation_title">Анимация</string>
    <string name="pref_chats_font_size_title">Размер шрифта</string>
    <string name="pref_chats_clear_title">Очистить чаты</string>
    <string name="pref_chats_security_title">Безопасность</string>
    <string name="pref_chats_import_key_title">Экспортировать ключ шифрования</string>
    <string name="pref_chats_export_key_title">Импортировать ключ шифрования</string>
    <string name="pref_chats_remove_key_title">Удалить ключ шифрования</string>
    <string name="password_title">Введите пароль</string>
    <string name="password_empty_error">Пароль не может быть пустым</string>
    <string name="password_wrong_error">Пароль введен неверно</string>
    <string name="user_key_removed_message">Ключ шифрования удален</string>
    <string name="pref_telephony_accounts">Учетные записи</string>
    <string name="pref_telephony_encryption_type_title">Шифрование</string>
    <string name="pref_telephony_encryption_type_none">Без шифрования</string>
    <string name="pref_telephony_encryption_type_srtp">SRTP</string>
    <string name="pref_telephony_encryption_type_none_value" translatable="false">VoipEncryptionNone</string>
    <string name="pref_telephony_encryption_type_srtp_value" translatable="false">VoipEncryptionSrtp</string>
    <string name="pref_profile_balance_title">Баланс</string>
    <string name="pref_profile_balance_summary_default">0</string>
    <string name="pref_profile_profile_title">Мой профиль</string>
    <string name="pref_telephony_video_enabled_title">Разрешить видео</string>
    <string name="pref_telephony_video_resolution_wifi_title">Размер видео (Wi-Fi)</string>
    <string name="pref_telephony_video_resolution_cell_title">Размер видео (Cell)</string>
    <string name="pref_telephony_video_resolution_qvga">QVGA</string>
    <string name="pref_telephony_video_resolution_vga">VGA</string>
    <string name="pref_telephony_video_resolution_720p">720p</string>
    <string name="pref_telephony_video_resolution_qvga_value" translatable="false">VideoSizeQvga</string>
    <string name="pref_telephony_video_resolution_vga_value" translatable="false">VideoSizeVga</string>
    <string name="pref_telephony_video_resolution_720p_value" translatable="false">VideoSize720p</string>
    <string name="pref_telephony_noise_suppression_title">Эхо- и шумоподавление</string>
    <string name="pref_telephony_noise_suppression_none">Выключено</string>
    <string name="pref_telephony_noise_suppression_soft">Умеренное</string>
    <string name="pref_telephony_noise_suppression_aggressive">Усиленное</string>
    <string name="pref_telephony_noise_suppression_none_value" translatable="false">EchoCancellationModeOff</string>
    <string name="pref_telephony_noise_suppression_soft_value" translatable="false">EchoCancellationModeSoft</string>
    <string name="pref_telephony_noise_suppression_aggressive_value" translatable="false">EchoCancellationModeHard</string>
    <string name="pref_info_about_title">О программе</string>
    <string name="pref_info_what_new_title">Что нового</string>
    <string name="pref_info_known_bugs_title">Известные проблемы</string>
    <string name="pref_info_help_title">Помощь</string>
    <string name="pref_info_about_url">http://files.swisstok.ru/info/dmc_about_ru.html</string>
    <string name="pref_debug_mode_title">Режим отладки</string>
    <string name="pref_debug_mode_on_warning">Режим отладки увеличивает объем данных приложения и использует персональные данные</string>
    <string name="turn_on">Включить</string>
    <string name="turn_off">Выключить</string>
    <string name="pref_debug_codecs_title">Кодеки</string>
    <string name="pref_debug_calls_log_title">Лог звонков</string>
    <string name="pref_debug_calls_history_title">История звонков</string>
    <string name="pref_debug_calls_quality_log_title">Лог качества звонков</string>
    <string name="pref_debug_calls_chat_log_title">Лог чата</string>
    <string name="pref_debug_db_log_title">Лог БД</string>
    <string name="pref_debug_queries_log_title">Лог запросов</string>
    <string name="pref_debug_send_bug_title">Отправить ошибку</string>
    <string name="pref_debug_codecs_audio_title">Аудио кодеки %s</string>
    <string name="pref_debug_codecs_video_title">Видео кодеки %s</string>
    <string name="pref_debug_send_report_subject">Тема</string>
    <string name="pref_debug_send_report_message">Описание</string>
    <string name="pref_debug_send_report_calls_log">Лог звонков</string>
    <string name="pref_debug_send_report_calls_history_log">Лог истории звонков</string>
    <string name="pref_debug_send_report_calls_quality_log">Лог качества звонков</string>
    <string name="pref_debug_send_report_chats_log">Лог чата</string>
    <string name="pref_debug_send_report_db_log">Лог БД</string>
    <string name="pref_debug_send_report_queries_log">Лог запросов</string>
    <string name="pref_debug_send_report_trace_log">Лог отладки</string>
    <string name="pref_debug_clear_logs_title">Очистить логи</string>
    <string name="pref_debug_trace_log_title">Лог отладки</string>
    <string name="pref_debug_application_log_title">Лог программы</string>
    <string name="menu_item_chat_settings">Настройки чата</string>
    <string name="attach_content_to_chat_title">Прикрепить</string>
    <string name="take_photo">Сделать фото</string>
    <string name="select_from_gallery">Фото из галереи</string>
    <string name="send_contact">Отправить контакт</string>
    <string name="call_screen_awaiting">Удержание</string>
    <string name="call_screen_decline">Отклонить</string>
    <string name="active_call_video">Видео</string>
    <string name="active_call_audio_src">Источник звука</string>
    <string name="select_all">Выбрать все</string>
    <string name="deselect_all">Снять выделение</string>
    <string name="outgoing_call">Исходящий вызов</string>
    <string name="voice_call">Голосовой вызов</string>
    <string name="video_call">Видео вызов</string>
    <string name="menu_item_manage_users">Участники чата</string>
    <string name="action_set_all_read">Отметить как прочитанные</string>
    <string name="action_forward">Переслать</string>
    <string name="action_copy">Скопировать</string>
    <string name="action_quote">Цитировать</string>
    <string name="continue_without_key_saving">ПРОДОЛЖИТЬ</string>
    <string name="key_import_title">Для доступа к своим чатам\nвведите ранее созданный\nключ шифрования</string>
    <string name="key_import_message">Для переноса ключа с помощью\nQR-кода Вам потребуется Ваше старое\nустройство. Для переноса ключа через\nкопирование скопируйте ранее\nсохраненный ключ</string>
    <string name="import_key_from_clipboard">Скопировать ключ</string>
    <string name="import_key_from_qr">Сканировать QR-код</string>
</resources>