<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ru.swisstok.dodicall.preference.CustomSwitchPreference
        android:key="pref_debug_mode"
        android:title="@string/pref_debug_mode_title"
        app:tableColumn="TraceMode"
        />
    <PreferenceScreen
        android:key="pref_debug_codecs"
        android:dependency="pref_debug_mode"
        android:title="@string/pref_debug_codecs_title"
        android:fragment="ru.swisstok.dodicall.preference.fragment.CodecsDebugPreferenceFragment"
        />
    <PreferenceScreen
        android:key="pref_debug_calls_log"
        android:dependency="pref_debug_mode"
        android:title="@string/pref_debug_calls_log_title"
        />
    <PreferenceScreen
        android:key="pref_debug_calls_history"
        android:dependency="pref_debug_mode"
        android:title="@string/pref_debug_calls_history_title"
        />
    <PreferenceScreen
        android:key="pref_debug_calls_quality_log"
        android:dependency="pref_debug_mode"
        android:title="@string/pref_debug_calls_quality_log_title"
        />
    <PreferenceScreen
        android:key="pref_debug_chat_log"
        android:dependency="pref_debug_mode"
        android:title="@string/pref_debug_calls_chat_log_title"
        />
    <PreferenceScreen
        android:key="pref_debug_db_log"
        android:dependency="pref_debug_mode"
        android:title="@string/pref_debug_db_log_title"
        />
    <PreferenceScreen
        android:key="pref_debug_queries_log"
        android:dependency="pref_debug_mode"
        android:title="@string/pref_debug_queries_log_title"
        />
    <PreferenceScreen
        android:key="pref_debug_trace_log"
        android:dependency="pref_debug_mode"
        android:title="@string/pref_debug_trace_log_title"
        />
    <PreferenceScreen
        android:key="pref_debug_application_log"
        android:dependency="pref_debug_mode"
        android:title="@string/pref_debug_application_log_title"
        />
    <PreferenceScreen
        android:key="pref_debug_send_bug"
        android:title="@string/pref_debug_send_bug_title"
        android:fragment="ru.swisstok.dodicall.preference.fragment.SendReportPreferenceFragment"
        />
    <Preference
        android:key="pref_debug_clear_logs"
        android:title="@string/pref_debug_clear_logs_title"
        />
    <!--don't delete-->
    <!--<Preference
        android:key="pref_debug_kill_jni"
        android:dependency="pref_debug_mode"
        android:title="@string/pref_debug_kill_jni_title"
        />
    <Preference
        android:key="pref_debug_kill_java"
        android:dependency="pref_debug_mode"
        android:title="@string/pref_debug_kill_java_title"
        />-->
</PreferenceScreen>