<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">
    <header
        android:fragment="ru.swisstok.dodicall.preference.fragment.CommonPreferenceFragment"
        android:title="@string/pref_header_common"
        />
    <header
        android:fragment="ru.swisstok.dodicall.preference.fragment.TelephonyPreferenceFragment"
        android:title="@string/pref_header_telephony"
        />
    <header
        android:fragment="ru.swisstok.dodicall.preference.fragment.ChatsPreferenceFragment"
        android:title="@string/pref_header_chats"
        />
    <header
        android:fragment="ru.swisstok.dodicall.preference.fragment.InterfacePreferenceFragment"
        android:title="@string/pref_header_interface"
        />
    <header
        android:fragment="ru.swisstok.dodicall.preference.fragment.InfoPreferenceFragment"
        android:title="@string/pref_header_info"
        />
    <header
        android:fragment="ru.swisstok.dodicall.preference.fragment.DebugPreferenceFragment"
        android:title="@string/pref_header_debug"
        />
</preference-headers>
