<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ru.swisstok.dodicall.preference.InlineEditTextPreference
        android:key="pref_debug_send_report_subject"
        android:title="@string/pref_debug_send_report_subject"
        android:defaultValue=""
        android:persistent="false"
        android:layout="@layout/edit_text_preference_inline"
        />
    <ru.swisstok.dodicall.preference.InlineEditTextPreference
        android:key="pref_debug_send_report_message"
        android:title="@string/pref_debug_send_report_message"
        android:defaultValue=""
        android:persistent="false"
        android:layout="@layout/edit_text_preference_inline"
        />
    <ru.swisstok.dodicall.preference.CustomSwitchPreference
        android:key="pref_debug_send_report_calls_log"
        android:title="@string/pref_debug_send_report_calls_log"
        android:defaultValue="true"
        android:persistent="false"
        />
    <ru.swisstok.dodicall.preference.CustomSwitchPreference
        android:key="pref_debug_send_report_calls_history_log"
        android:title="@string/pref_debug_send_report_calls_history_log"
        android:defaultValue="true"
        android:persistent="false"
        />
    <ru.swisstok.dodicall.preference.CustomSwitchPreference
        android:key="pref_debug_send_report_calls_quality_log"
        android:title="@string/pref_debug_send_report_calls_quality_log"
        android:defaultValue="true"
        android:persistent="false"
        />
    <ru.swisstok.dodicall.preference.CustomSwitchPreference
        android:key="pref_debug_send_report_chats_log"
        android:title="@string/pref_debug_send_report_chats_log"
        android:defaultValue="true"
        android:persistent="false"
        />
    <ru.swisstok.dodicall.preference.CustomSwitchPreference
        android:key="pref_debug_send_report_db_log"
        android:title="@string/pref_debug_send_report_db_log"
        android:defaultValue="true"
        android:persistent="false"
        />
    <ru.swisstok.dodicall.preference.CustomSwitchPreference
        android:key="pref_debug_send_report_queries_log"
        android:title="@string/pref_debug_send_report_queries_log"
        android:defaultValue="true"
        android:persistent="false"
        />
    <ru.swisstok.dodicall.preference.CustomSwitchPreference
        android:key="pref_debug_send_report_trace_log"
        android:title="@string/pref_debug_send_report_trace_log"
        android:defaultValue="true"
        android:persistent="false"
        />
</PreferenceScreen>