<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">

    <item
        android:id="@+id/action_copy"
        android:showAsAction="never"
        android:title="@string/action_copy"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_quote"
        android:showAsAction="never"
        android:title="@string/action_quote"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_forward"
        android:showAsAction="never"
        android:title="@string/action_forward"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_select_all"
        android:showAsAction="never"
        android:title="@string/select_all"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_deselect_all"
        android:showAsAction="never"
        android:title="@string/deselect_all"
        app:showAsAction="never"/>
</menu>
