<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".activity.ChatActivity">

    <item
        android:id="@+id/action_video_call"
        android:icon="@drawable/ic_video_wh"
        android:title="@string/video_call"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_voice_call"
        android:icon="@drawable/phone_main"
        android:title="@string/voice_call"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_chat_settings"
        android:title="@string/menu_item_chat_settings"/>

    <item
        android:id="@+id/action_manage_users"
        android:title="@string/menu_item_manage_users"/>

</menu>
