<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/search"
        android:title="@string/action_chat_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView"/>

    <item
        android:id="@+id/action_create_new_chat"
        android:icon="@drawable/create_new_chat"
        android:title="@string/action_create_new_chat"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_to_deleting_chats"
        android:title="@string/action_delete_chats"/>

    <item
        android:id="@+id/action_set_all_chats_read"
        android:title="@string/action_set_all_read"/>
</menu>
